--- a/requirements.txt
+++ b/requirements.txt
@@ -42,10 +42,11 @@ mdurl==0.1.2
 mediapipe==0.10.21
 ml_dtypes==0.5.1
 narwhals==1.26.0
-numpy==1.26.4
+numpy==2.2.3
 open3d==0.18.0
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 opt_einsum==3.4.0
 packaging==24.2
