--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 absl-py==2.1.0
 altair==5.5.0
 ansi2html==1.9.1
+anytree==2.12.1
+asttokens==3.0.0
 attrs==25.1.0
 blinker==1.9.0
+c3d==0.5.2
 cachetools==5.5.1
 certifi==2025.1.31
 cffi==1.17.1
@@ -17,15 +20,22 @@ dash==2.14.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+decorator==5.2.1
+deep-sort-realtime==1.3.2
 et_xmlfile==2.0.0
+exceptiongroup==1.2.2
+executing==2.2.0
 flatbuffers==25.2.10
 fonttools==4.56.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
+imageio-ffmpeg==0.6.0
+ipython==8.32.0
 ipywidgets==8.1.1
 jax==0.5.0
 jaxlib==0.5.0
+jedi==0.19.2
 Jinja2==3.1.5
 JsonForm==0.0.2
 jsonschema==4.23.0
@@ -38,25 +48,36 @@ loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
-mediapipe
+mediapipe==0.10.21
 ml_dtypes==0.5.1
 narwhals==1.26.0
-numpy<2
+numpy==1.26.4
 open3d==0.18.0
 opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
+openvino==2025.0.0
+openvino-telemetry==2025.0.1
 opt_einsum==3.4.0
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+patsy==1.0.1
 pillow==11.1.0
+prompt_toolkit==3.0.50
 protobuf==4.25.6
+pure_eval==0.2.3
 pyarrow==19.0.0
 pycparser==2.22
 pydeck==0.9.1
 Pygments==2.19.1
 pyparsing==3.2.1
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.2
+PyQt5_sip==12.17.0
 python-dateutil==2.9.0.post0
 Python-EasyConfig==0.1.7
 pytz==2025.1
@@ -66,21 +87,28 @@ Resource==0.2.1
 retrying==1.3.4
 rich==13.9.4
 rpds-py==0.22.3
+rtmlib==0.0.13
 scipy==1.15.1
 sentencepiece==0.2.0
 six==1.17.0
 smmap==5.0.2
 sounddevice==0.5.1
+sports2d==0.6.3
+stack-data==0.6.3
+statsmodels==0.14.4
 streamlit==1.42.0
 tenacity==9.0.0
 toml==0.10.2
 torch==2.1.2
 torchvision==0.16.2
 tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 watchdog==6.0.0
+wcwidth==0.2.13
 Werkzeug==3.0.1
 widgetsnbextension==4.0.9
 win32-setctime==1.1.0
